Inclusão de áreas na homepage e ajuste de CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -33,7 +33,7 @@
             </div>
 
             <div class="rightBar">
-                <div class="iconeLupa"><i class="fas fa-search"></i></div>
+                <div class="iconeLupa"><i class="fas fa-search fa-lg"></i></div>
                 <div>
                     <form action="" id="formBusca">
                         <input class="Busca-texto" type="text">
@@ -49,13 +49,45 @@
 
     <div class="Container">
         <div class="Main">
-            A
+            HOW TO
         </div>
         <div class="Mid">
-            B
+            <section class="blobMid1">
+                <h3>Ranking</h3>
+                <ol>
+                    <li>Fio A</li>
+                    <li>Fio B</li>
+                    <li>Fio C</li>
+                    <li>Fio D</li>
+                </ol>
+            </section>
+            <section class="blobMid2">
+                <h3>Faça agora o seu</h3>
+                <div class="mailMid">
+                    <form action="" id="formsignUp">
+                        <input class="Busca-texto" type="text">
+                    </form>
+                    <i id="envelope" class="far fa-envelope fa-2x"></i>
+                </div>
+            </section>
+            <section class="blobMid3">
+                <h3>Descubra</h3>
+                <ul>
+                    <li>Fio Novo A</li>
+                    <li>Fio Novo B</li>
+                    <li>Fio Novo C</li>
+                    <li>Fio Novo D</li>
+                </ul>
+            </section>
         </div>
         <div class="Bottom">
-            C
+            <h4>Indique um Amigo</h4>
+                <div class="mailMid">
+                    <form action="" id="formsignUp">
+                        <input class="Busca-texto" type="text">
+                    </form>
+                    <i id="envelopeindique" class="far fa-envelope fa-2x"></i>
+                </div>
         </div>
     </div>
 
