--- a/index.html
+++ b/index.html
@@ -91,11 +91,16 @@
         </div>
     </div>
 
-    <footer style="position: absolute; padding: 0px; bottom: 0px; width: 100%; height: 40px">
+    <footer>
         <div class="institucionais">
             <div class="rodape"><a href="/">Sobre Nós</a></div>
             <div class="rodape"><a href="/">Contato</a></div>
             <div class="rodape"><a href="/">Créditos</a></div>
+        </div>
+        <div class="redes">
+            <i class="fab fa-twitter-square fa-lg"></i>
+            <i class="fab fa-facebook-square fa-lg"></i>
+            <i class="fab fa-instagram-square fa-lg"></i>
         </div>
     </footer>
 
