ajuste imagens html, ajuste css conteúdo principal, ajuste css responsividade

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
     <header>
         <div class="Topo">
+            <div class="blank"></div>
             <div class="logoTopo">
-                <img id="logo" src="/img/SOF_shadowBlue.png" alt="Logo Principal">
+                <img id="logo" src="/img/primarylogo_border.PNG.png" alt="Logo Principal">
             </div>
             <div class="TopoDireita">
                 <div class="Direita"><a href="/">Fazer Login</a></div>
@@ -40,16 +41,13 @@
                     </form>
                 </div>
             </div>
-
-
         </div>
-
-
     </header>
 
+    
     <div class="Container">
         <div class="Main">
-            HOW TO
+            <img src="/img/mainImageHome.gif" alt="Carrossel fake">
         </div>
         <div class="Mid">
             <section class="blobMid1">
@@ -64,7 +62,7 @@
             <section class="blobMid2">
                 <h3>Faça agora o seu</h3>
                 <div class="mailMid">
-                    <form action="" id="formsignUp">
+                    <form action="" class="formSignUp">
                         <input class="Busca-texto" type="text">
                     </form>
                     <i id="envelope" class="far fa-envelope fa-2x"></i>
@@ -82,12 +80,12 @@
         </div>
         <div class="Bottom">
             <h4>Indique um Amigo</h4>
-                <div class="mailMid">
-                    <form action="" id="formsignUp">
-                        <input class="Busca-texto" type="text">
-                    </form>
-                    <i id="envelopeindique" class="far fa-envelope fa-2x"></i>
-                </div>
+            <div class="mailMid">
+                <form action="" id="formsignUp">
+                    <input class="Busca-texto" type="text">
+                </form>
+                <i id="envelopeindique" class="far fa-envelope fa-2x"></i>
+            </div>
         </div>
     </div>
 
