--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
             <div class="leftBar">
                 <div class="LinksPrincipais"><a href="/index.html">Home</a></div>
                 <div class="LinksPrincipais"><a href="/">Ranking</a></div>
-                <div class="LinksPrincipais"><a href="/">Categorias</a></div>
+                <div class="LinksPrincipais dropdown">
+                    <button class="dropbtn"><a href="/">Categorias</a></button>
+                        <div class="dropdown-content">
+                            <a href="/">Categoria A</a><br>
+                            <a href="/">Categoria B</a><br>
+                            <a href="/">Categoria C</a><br>
+                            <a href="/">Ver todas</a>
+                        </div>
+                </div>
             </div>
 
             <div class="rightBar">
