--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="TopoDireita">
                 <div class="Direita"><a href="/">Fazer Login</a></div>
-                <div class="Direita"></div><button id="Cadastre">Cadastre-se</button>
+                <div class="Direita"></div><button id="Cadastre"><a href="./telaCadastrol.html">Cadastre-se</a></button>
             </div>
         </div>
         </div>
