--- a/telaCadastrol.html
+++ b/telaCadastrol.html
@@ -21,7 +21,8 @@
             </div>
             <div class="TopoDireita">
                 <div class="Direita"><a href="/">Fazer Login</a></div>
-                <div class="Direita"></div><button id="Cadastre">Cadastre-se</button>
+                <div class="Direita"></div><button id="Cadastre"><a id="loginBtn"
+                        href="./telaCadastrol.html">Cadastre-se</a></button>
             </div>
         </div>
         </div>
@@ -32,12 +33,12 @@
                 <div class="LinksPrincipais"><a href="/">Ranking</a></div>
                 <div class="LinksPrincipais dropdown">
                     <button class="dropbtn"><a href="/">Categorias</a></button>
-                        <div class="dropdown-content">
-                            <a href="/">Categoria A</a><br>
-                            <a href="/">Categoria B</a><br>
-                            <a href="/">Categoria C</a><br>
-                            <a href="/">Ver todas</a>
-                        </div>
+                    <div class="dropdown-content">
+                        <a href="/">Categoria A</a><br>
+                        <a href="/">Categoria B</a><br>
+                        <a href="/">Categoria C</a><br>
+                        <a href="/">Ver todas</a>
+                    </div>
                 </div>
             </div>
 
@@ -53,29 +54,52 @@
     </header>
 
     <main>
+
         <h1>Chegou agora?</h1>
         <h2>Crie sua conta!</h2>
-       
-            <button class ="fab fa-twitter fa-2x " id = "btnLogin"></button>
-            <button class ="fab fa-apple fa-2x " id = "btnLogin"></button>
-            <button class="fab fa-google fa-2x "id = "btnLogin"></button>
-            <button class="fab fa-facebook-f fa-2x" id ="btnLogin"></button>
+        <div id="teste">
 
-            <div class = "loginAuto">
-            <div class="containerInput">
-                <input type="text" name="user" id="inputUser">
-                <input type="text" name="userValidation" id="inputUser">
-            </div>
-            <div class="containerInput">
-                <input type="email" name="email" id="inputUser">
-                <input type="email" name="emailValidation" id="inputUser">
-            </div>
-            <div class="containerInput">
-                <input type="password" name="password" id="password">
-                <input type="password" name="passwordValidation" id="password">
-            </div>
-            <button id="cadastrar">Cadastrar</button>
+            <h3 id="loginBtn">Cadastrar com:</h3>
+            <h4>Ou</h4>
 
+            <div class="boxCadastro">
+
+                <div class="iconesLogin">
+                    <button class="fab fa-twitter fa-2x " id="btnLogin"></button>
+                    <button class="fab fa-apple fa-2x " id="btnLogin"></button>
+                </div>
+
+                <div class="iconesLogin">
+                    <button class="fab fa-google fa-2x " id="btnLogin"></button>
+                    <button class="fab fa-facebook-f fa-2x" id="btnLogin"></button>
+                </div>
+
+                <div class="loginAuto">
+                    <div class="containerInput">
+                        <span>Usuário</span>
+                        <input type="text" name="user" id="inputUser">
+                        <span>Nome Completo</span>
+                        <input type="text" name="userName" id="inputUser">
+                    </div>
+                    <div class="containerInput">
+                        <span>E-mail</span>
+                        <input type="email" name="email" id="inputUser">
+                        <span>Confirmar e-mail</span>
+                        <input type="email" name="emailValidation" id="inputUser">
+                    </div>
+                    <div class="containerInput">
+                        <span>Senha</span>
+                        <input type="password" name="password" id="password">
+                        <span>Confirmar senha</span>
+                        <input type="password" name="passwordValidation" id="password">
+                    </div>
+                    <div class="btnCadastra">
+                        <button id="cadastrar">Cadastrar</button>
+                    </div>
+
+                </div>
+
+            </div>
 
         </div>
 
