--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="LinksPrincipais"><a href="/index.html">Home</a></div>
                 <div class="LinksPrincipais"><a href="/">Ranking</a></div>
                 <div class="LinksPrincipais dropdown">
-                    <button class="dropbtn"><a href="/">Categorias</a></button>
+                    <button class="dropbtn"><a href="/categories.html">Categorias</a></button>
                         <div class="dropdown-content">
                             <a href="/">Categoria A</a><br>
                             <a href="/">Categoria B</a><br>
