ajuste de menu header

--- a/categories.html
+++ b/categories.html
@@ -33,9 +33,10 @@
                 <div class="LinksPrincipais dropdown">
                     <button class="dropbtn"><a href="/">Categorias</a></button>
                     <div class="dropdown-content">
-                        <a href="/">Categoria A</a><br>
-                        <a href="/">Categoria B</a><br>
-                        <a href="/">Categoria C</a><br>
+                        <a href="/">Aprendizagem</a><br>
+                        <a href="/">Atualidades/a><br>
+                        <a href="/">Curadoria</a><br>
+                        <a href="/">Entretenimento</a><br>
                         <a href="/">Ver todas</a>
                     </div>
                 </div>
