ajuste endereco relativo de links

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="icon" href="./img/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="/index.css">
-    <link rel="stylesheet" type="text/css" href="/headerAndFooter.css">
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./headerAndFooter.css">
     <title>Home | Segue o Fio</title>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="Topo">
             <div class="blank"></div>
             <div class="logoTopo">
-                <img id="logo" src="/img/primarylogo_border.PNG.png" alt="Logo Principal">
+                <img id="logo" src="./img/primarylogo_border.PNG.png" alt="Logo Principal">
             </div>
             <div class="TopoDireita">
                 <div class="Direita"><a href="/">Fazer Login</a></div>
@@ -28,10 +28,10 @@
 
         <div class="Barra">
             <div class="leftBar">
-                <div class="LinksPrincipais"><a href="/index.html">Home</a></div>
+                <div class="LinksPrincipais"><a href="./index.html">Home</a></div>
                 <div class="LinksPrincipais"><a href="/">Ranking</a></div>
                 <div class="LinksPrincipais dropdown">
-                    <button class="dropbtn"><a href="/categories.html">Categorias</a></button>
+                    <button class="dropbtn"><a href="./categories.html">Categorias</a></button>
                         <div class="dropdown-content">
                             <a href="/">Aprendizagem</a><br>
                             <a href="/">Atualidades</a><br>
@@ -56,7 +56,7 @@
     
     <div class="Container">
         <div class="Main">
-            <img src="/img/mainImageHome.gif" alt="Carrossel fake">
+            <img src="./img/mainImageHome.gif" alt="Carrossel fake">
         </div>
         <div class="Mid">
             <section class="blobMid1">
