--- a/categories.html
+++ b/categories.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/favicon.ico">
+    <link rel="icon" href="./img/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="/headerAndFooter.css">
-    <link rel="stylesheet" type="text/css" href="categories.css">
+    <link rel="stylesheet" type="text/css" href="./headerAndFooter.css">
+    <link rel="stylesheet" type="text/css" href="./categories.css">
     <title>Categorias | Segue o Fio</title>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="Topo">
             <div class="blank"></div>
             <div class="logoTopo">
-                <img id="logo" src="/img/primarylogo_border.PNG.png" alt="Logo Principal">
+                <img id="logo" src="./img/primarylogo_border.PNG.png" alt="Logo Principal">
             </div>
             <div class="TopoDireita">
                 <div class="Direita"><a href="/">Fazer Login</a></div>
@@ -28,7 +28,7 @@
 
         <div class="Barra">
             <div class="leftBar">
-                <div class="LinksPrincipais"><a href="/index.html">Home</a></div>
+                <div class="LinksPrincipais"><a href="./index.html">Home</a></div>
                 <div class="LinksPrincipais"><a href="/">Ranking</a></div>
                 <div class="LinksPrincipais dropdown">
                     <button class="dropbtn"><a href="/">Categorias</a></button>
