ajuste nome de arquivos em inglês, css finalizado e responsividade criada

--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="./busca.css">
+    <link rel="stylesheet" type="text/css" href="./search.css">
     <link rel="stylesheet" type="text/css" href="./headerAndFooter.css">
     <title>Busca | Segue o Fio</title>
 </head>
@@ -56,9 +56,9 @@
 
     <div class="Container">
         <div class="searchMain">
-            <div class="searchImg">
-                <img src="./img/search.png" alt="search logo">
-            </div>
+
+            <img src="./img/search.png" alt="search logo">
+
             <div class="searchTool">
                 <form action="" id="searchInputBox">
                     <input class="textSearch" type="text">
