--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <div class="LinksPrincipais dropdown">
                     <button class="dropbtn"><a href="./categories.html">Categorias</a></button>
                         <div class="dropdown-content">
-                            <a href="/">Aprendizagem</a><br>
-                            <a href="/">Atualidades</a><br>
-                            <a href="/">Curadoria</a><br>
-                            <a href="/">Entretenimento</a><br>
-                            <a href="/">Ver todas</a>
+                            <a href="./search.html">Aprendizagem</a><br>
+                            <a href="./search.html">Atualidades</a><br>
+                            <a href="./search.html">Curadoria</a><br>
+                            <a href="./search.html">Entretenimento</a><br>
+                            <a href="./categories.html">Ver todas</a>
                         </div>
                 </div>
             </div>
