adding links to existing pages - categories and search. also adding footer links to general social media page

--- a/search.html
+++ b/search.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="rightBar">
-                <div class="iconeLupa"><i class="fas fa-search fa-lg"></i></div>
+                <div class="iconeLupa"><a href="./search.html"><i class="fas fa-search fa-lg"></a></i></div>
                 <div>
                     <form action="" id="formBusca">
                         <input class="Busca-texto" type="text">
@@ -149,9 +149,9 @@
             <div class="rodape"><a href="/">Créditos</a></div>
         </div>
         <div class="redes">
-            <i class="fab fa-twitter-square fa-lg"></i>
-            <i class="fab fa-facebook-square fa-lg"></i>
-            <i class="fab fa-instagram-square fa-lg"></i>
+            <a href="http://twitter.com/" target="_blank"><i class="fab fa-twitter-square fa-lg"></i></a>
+            <a href="http://facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-lg"></i></a>
+            <a href="http://instagram.com/" target="_blank"><i class="fab fa-instagram-square fa-lg"></i></a>
         </div>
     </footer>
 
