--- a/categories.html
+++ b/categories.html
@@ -33,17 +33,17 @@
                 <div class="LinksPrincipais dropdown">
                     <button class="dropbtn"><a href="/">Categorias</a></button>
                     <div class="dropdown-content">
-                        <a href="/">Aprendizagem</a><br>
-                        <a href="/">Atualidades/a><br>
-                        <a href="/">Curadoria</a><br>
-                        <a href="/">Entretenimento</a><br>
-                        <a href="/">Ver todas</a>
+                        <a href="./search.html">Aprendizagem</a><br>
+                        <a href="./search.html">Atualidades</a><br>
+                        <a href="./search.html">Curadoria</a><br>
+                        <a href="./search.html">Entretenimento</a><br>
+                        <a href="./categories.html">Ver todas</a>
                     </div>
                 </div>
             </div>
 
             <div class="rightBar">
-                <div class="iconeLupa"><i class="fas fa-search fa-lg"></i></div>
+                <div class="iconeLupa"><a href="./search.html"><i class="fas fa-search fa-lg"></a></i></div>
                 <div>
                     <form action="" id="formBusca">
                         <input class="Busca-texto" type="text">
@@ -129,9 +129,9 @@
             <div class="rodape"><a href="/">Créditos</a></div>
         </div>
         <div class="redes">
-            <i class="fab fa-twitter-square fa-lg"></i>
-            <i class="fab fa-facebook-square fa-lg"></i>
-            <i class="fab fa-instagram-square fa-lg"></i>
+            <a href="http://twitter.com/" target="_blank"><i class="fab fa-twitter-square fa-lg"></i></a>
+            <a href="http://facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-lg"></i></a>
+            <a href="http://instagram.com/" target="_blank"><i class="fab fa-instagram-square fa-lg"></i></a>
         </div>
     </footer>
 
