--- a/dashboard.html
+++ b/dashboard.html
@@ -21,24 +21,13 @@
             </div>
             <div class="TopoDireita">
                 <div class="profileMenu">
-                    <button id="profileMenuPic"><a href="#">
-                        <img src="./img/profile4.jpg" alt="profile picture on dropdown menu"></a>
-                        <button class="arrowDropBtn">
-                            <a href=""><i class="fas fa-sort-down"> </i></a>
-                        </button>
+                    <button id="profileMenuPic">
+                        <a href="#">
+                            <img src="./img/profile4.jpg" alt="profile picture on dropdown menu"></a>
+                        <a href="#"><i class="fas fa-sort-down"></i></a>
                     </button>
-                    <div class="menuLoginContent">
-                        <ul>@Usuário</ul>
-                        <li>Painel de Controle</li>
-                        <li>Criar Novo Fio</li>
-                        <li>Gerenciar Fios</li>
-                        <li>Editar Minha Conta</li>
-                        <li>Sair</li>
-                    </div>
                 </div>
-
             </div>
-        </div>
         </div>
 
         <div class="Barra">
@@ -71,69 +60,53 @@
 
     <div class="container">
         <div class="main">
-            <div class="pageTitle">Categorias</div>
-            <div class="categoriesGrid">
-                <div class="catItem">
-                    <i class="fas fa-graduation-cap fa-2x"></i>
-                    Aprendizagem
+            <h2>Painel de Controle</h2>
+            <section class="halfTop">
+                <div class="halfTopLeft">
+                    <p class="textP">Bem vindo(a) de volta, @usuário</p>
+                    <button class="newThread"><i class="far fa-plus-square"></i> Adicione um novo Fio</button>
+                    <div class="draftsSummary">
+                        <ul class="titleUl">Finalize seus rascunhos</ul>
+                        <div class="draftsContent">
+                            <li><a href="">Nome Rascunho Salvo A</a></li>
+                            <li><a href="">Nome Rascunho Salvo B</a></li>
+                            <li><a href="">Nome Rascunho Salvo C</a></li>
+                            <li><a href="">Nome Rascunho Salvo D</a></li>
+                            <li><a href="">Nome Rascunho Salvo E</a></li>
+                            <li><a href="">Nome Rascunho Salvo F</a></li>
+                            <li><a href="">Nome Rascunho Salvo G</a></li>
+                            <li><a href="">Nome Rascunho Salvo H</a></li>
+                        </div>
+                    </div>
                 </div>
-                <div class="catItem">
-                    <i class="far fa-newspaper fa-2x"></i>
-                    Atualidades
+                <div class="halfTopRight">
+                    <img src="./img/dashboardImg.png" alt="carrossel dashboard">
                 </div>
-                <div class="catItem">
-                    <i class="fas fa-clipboard-list fa-2x"></i>
-                    Curadoria
+            </section>
+            <section class="halfBottom">
+                <div class="halfBottomLeft">
+                    <div class="viewsBar">
+                        <ul class="titleUl">Fios Mais Visualizados</ul>
+                        <div class="viewsContent">
+                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Fio Tema A</a></li>
+                        </div>
+                    </div>
                 </div>
-                <div class="catItem">
-                    <i class="fas fa-film fa-2x"></i>
-                    Entretenimento
+                <div class="halfBottomRight">
+                    <div class="sharingBar">
+                        <ul class="titleUl">Fios Mais Compartilhados</ul>
+                        <div class="sharingContent">
+                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Fio Tema A</a></li>
+                        </div>
+                    </div>
                 </div>
-                <div class="catItem">
-                    <i class="fas fa-futbol fa-2x"></i>
-                    Esportes
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-calendar-alt fa-2x"></i>
-                    Eventos
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-music fa-2x"></i>
-                    Música
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-envelope-open-text fa-2x"></i>
-                    Newsletter
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-podcast fa-2x"></i>
-                    Podcast
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-user-tie fa-2x"></i>
-                    Portifólio
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-paperclip fa-2x"></i>
-                    Referências
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-heartbeat fa-2x"></i>
-                    Saúde
-                </div>
-                <div class="catItem">
-                    <i class="far fa-question-circle fa-2x"></i>
-                    Tutoriais
-                </div>
-                <div class="catItem">
-                    <i class="fas fa-map-marked-alt fa-2x"></i>
-                    Viagem
-                </div>
-                <div class="catItem">
-                    <i class="fab fa-youtube fa-2x"></i>
-                    Vídeo
-                </div>
-            </div>
+            </section>
         </div>
     </div>
 
