CSS adjustments and responsiveness added

--- a/dashboard.html
+++ b/dashboard.html
@@ -59,6 +59,7 @@
 
 
     <div class="container">
+        <button class="mainMenu"><i class="fas fa-bars fa-2x"></i></button>
         <div class="main">
             <h2>Painel de Controle</h2>
             <section class="halfTop">
@@ -88,9 +89,9 @@
                     <div class="viewsBar">
                         <ul class="titleUl">Fios Mais Visualizados</ul>
                         <div class="viewsContent">
-                            <li><a href="">Fio Tema A</a></li>
-                            <li><a href="">Fio Tema A</a></li>
-                            <li><a href="">Fio Tema A</a></li>
+                            <li><a href="">Nome Rascunho Salvo A</a></li>
+                            <li><a href="">Fio Nome Tema A</a></li>
+                            <li><a href="">Fio Nome Tema A</a></li>
                             <li><a href="">Fio Tema A</a></li>
                         </div>
                     </div>
