ajuste dropdown, adiciona links, ajuste responsividade headerlogin

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,11 +21,20 @@
             </div>
             <div class="TopoDireita">
                 <div class="profileMenu">
-                    <button id="profileMenuPic">
-                        <a href="#">
+                    <div id="profileMenuPic">
+                        <a href="./profileview.html">
                             <img src="./img/profile4.jpg" alt="profile picture on dropdown menu"></a>
                         <a href="#"><i class="fas fa-sort-down"></i></a>
-                    </button>
+                    </div>
+                    <div class="dropdownLogged">
+                        <li><a href="./dashboard.html">Painel de Controle</a></li>
+                        <li><a href="./newthread.html">Crie um Novo Fio</a></li>
+                        <li><a href="./threadsmgmt.html">Gerenciar meus Fios</a></li>
+                        <li><a href="./profileview.html">Visualizar meu Perfil</a></li>
+                        <li><a href="./accountmgmt.html">Editar minha Conta</a></li>
+                        <br>
+                        <li class="logoutMenu"><a href="./login.html">Sair</a></li>
+                    </div>
                 </div>
             </div>
         </div>
