css ajustment on about page for social links hover and footer links updates

--- a/newthread.html
+++ b/newthread.html
@@ -213,9 +213,9 @@
 
     <footer>
         <div class="institucionais">
-            <div class="rodape"><a href="/">Sobre Nós</a></div>
-            <div class="rodape"><a href="/">Contato</a></div>
-            <div class="rodape"><a href="/">Créditos</a></div>
+            <div class="rodape"><a href="./about.html">Sobre Nós</a></div>
+            <div class="rodape"><a href="/contact.html">Contato</a></div>
+            <div class="rodape"><a href="/credits.html">Créditos</a></div>
         </div>
         <div class="redes">
             <a href="http://twitter.com/" target="_blank"><i class="fab fa-twitter-square fa-lg"></i></a>
