--- a/about.html
+++ b/about.html
@@ -132,8 +132,8 @@
     <footer>
         <div class="institucionais">
             <div class="rodape"><a href="./about.html">Sobre Nós</a></div>
-            <div class="rodape"><a href="/contact.html">Contato</a></div>
-            <div class="rodape"><a href="/credits.html">Créditos</a></div>
+            <div class="rodape"><a href="./contact.html">Contato</a></div>
+            <div class="rodape"><a href="./credits.html">Créditos</a></div>
         </div>
         <div class="redes">
             <a href="http://twitter.com/" target="_blank"><i class="fab fa-twitter-square fa-lg"></i></a>
