--- a/threadsmgmt.html
+++ b/threadsmgmt.html
@@ -44,7 +44,7 @@
                 <div class="LinksPrincipais"><a href="./index.html">Home</a></div>
                 <div class="LinksPrincipais"><a href="/">Ranking</a></div>
                 <div class="LinksPrincipais dropdown">
-                    <button class="dropbtn"><a href="/">Categorias</a></button>
+                    <button class="dropbtn"><a href="./categories.html">Categorias</a></button>
                     <div class="dropdown-content">
                         <a href="./search.html">Aprendizagem</a><br>
                         <a href="./search.html">Atualidades</a><br>
