--- a/ranking.html
+++ b/ranking.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="./img/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="./headerAndFooter.css">
-    <link rel="stylesheet" type="text/css" href="./credits.css">
-    <title>Créditos | Segue o Fio</title>
+    <link rel="stylesheet" type="text/css" href="./ranking.css">
+    <title>Ranking | Segue o Fio</title>
 </head>
 
 <body>
@@ -55,43 +55,54 @@
 
 
     <div class="container">
-        <img src="./img/credits1.jpg" alt="imagem empresarial 1">
-        <div class="creditsContainer">
-            <h1>Créditos</h1>
-            <div class="creditsItem">
-                <div class="creditsTitle">
-                    Fontes
+        <div class="main">
+            <div class="pageTitle">Ranking</div>
+            <div class="rankBox">
+                <div class="rankItem">
+                    <ul>Mais Curtidos da Semana</ul>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
                 </div>
-                <div class="creditsContent">
-                    <li><a href="#">Fonte Logo</a></li>
-                    <li><a href="#">Fonte Imagens</a></li>
-                </div>
-            </div>
-            <div class="creditsItem">
-                <div class="creditsTitle">
-                    Imagens
-                </div>
-                <div class="creditsContent">
-                    <li><a href="#">Fotografo A</a></li>
-                    <li><a href="#">Fotografo B</a></li>
-                    <li><a href="#">Fotografo C</a></li>
-
+                <div class="rankItem">
+                    <ul>Mais Compartilhados da Semana</ul>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
                 </div>
             </div>
-            <div class="creditsItem">
-                <div class="creditsTitle">
-                    Item
+            <div class="rankBox">
+                <div class="rankItem">
+                    <ul>Mais Curtidos Geral</ul>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
                 </div>
-                <div class="creditsContent">
-                    <li><a href="#">Item A</a></li>
-                    <li><a href="#">Item B</a></li>
-                    <li><a href="#">Item C</a></li>
-                    <li><a href="#">Item D</a></li>
-                    <li><a href="#">Item E</a></li>
+                <div class="rankItem">
+                    <ul>Mais Compartilhados Geral</ul>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
+                    <li><a href="#">Listagem de Fios</a></li>
                 </div>
+            </div>
+            <div class="topCategoriesBox">
+                <div class="pageSubtitle">Top Categorias</div>
+                <div class="imagesBox">
+                    <a href=""><img src="./img/newsbanner.png" alt=""></a>
+                    <a href=""><img src="./img/podcastbanner.png" alt=""></a>
+                    <a href=""><img src="./img/travelbanner.png" alt=""></a>
+                </div>
+                
             </div>
         </div>
-        <img src="./img/credits2.jpg" alt="imagem empresarial 2">
     </div>
 
     <footer>
