--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
         <div class="Barra">
             <div class="leftBar">
                 <div class="LinksPrincipais"><a href="./index.html">Home</a></div>
-                <div class="LinksPrincipais"><a href="/">Ranking</a></div>
+                <div class="LinksPrincipais"><a href="./ranking.html">Ranking</a></div>
                 <div class="LinksPrincipais dropdown">
                     <button class="dropbtn"><a href="./categories.html">Categorias</a></button>
                     <div class="dropdown-content">
