responsiveness added to profile page

--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    <button class="mainMenu"><i class="fas fa-bars fa-2x"></i></button>
 
     <div class="container">
         <div class="profileViewBar">
@@ -119,12 +119,13 @@
                         <a href="#">
                             <li>Fio Já postado D</li>
                         </a>
-                    
                 </div>
             </div>
         </div>
 
     </div>
+
+    <button class="moreOptions">Mais Opções</button>
 
 
 
