--- a/profileview.html
+++ b/profileview.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./img/favicon.ico">
 
 
-    <link rel="stylesheet" type="text/css" href="./profile.css">
+    <link rel="stylesheet" type="text/css" href="./profileview.css">
     <title>Painel de Controle | Segue o Fio</title>
 </head>
 
