--- a/telaCadastrol.html
+++ b/telaCadastrol.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="/styleCadastrar.css">
-    <link rel="stylesheet" type="text/css" href="/responsive.css">
+    <link rel="stylesheet" type="text/css" href="./styleCadastrar.css">
+   <link rel="stylesheet" type="text/css" href="./responsive.css">
     <title>Home | Segue o Fio</title>
 </head>
 
@@ -64,14 +64,14 @@
 
             <div class="boxCadastro">
 
-                <div class="iconesLogin">
-                    <button class="fab fa-twitter fa-2x " id="btnLogin"></button>
-                    <button class="fab fa-apple fa-2x " id="btnLogin"></button>
+                <div class="iconesCad">
+                    <button class="fab fa-twitter fa-2x " id="btnCad"></button>
+                    <button class="fab fa-apple fa-2x " id="btnCad"></button>
                 </div>
 
-                <div class="iconesLogin">
-                    <button class="fab fa-google fa-2x " id="btnLogin"></button>
-                    <button class="fab fa-facebook-f fa-2x" id="btnLogin"></button>
+                <div class="iconesCad">
+                    <button class="fab fa-google fa-2x " id="btnCad"></button>
+                    <button class="fab fa-facebook-f fa-2x" id="btnCad"></button>
                 </div>
 
                 <div class="loginAuto">
