Tela de login Final

--- a/telaLogin.html
+++ b/telaLogin.html
@@ -57,10 +57,10 @@
 
         <div id="container">
 
-            <h3 id="loginBtn">Acesse sua conta</h3>
-            <h4>Entrando com:</h4>
-
-            <div class="boxCadastro">
+            <div class = "titulosLogin">
+                <h1>Acesse sua conta</h3>
+                <h4>Entrando com:</h4>
+            </div>
 
                 <div class="login">
                     <div class="containerInput">
@@ -74,24 +74,23 @@
 
                         <a href="">esqueceu sua senha?</a>
                     </div>
-
-                    <div class="boxBtnCenter">
-                        <button id="btnCadastrar">Login</button>
-                        <span>ou</span>
-                        <div class="iconesLogin">
-                            <button class="fab fa-twitter fa-2x " id="btnLogin"></button>
-                            <button class="fab fa-apple fa-2x " id="btnLogin"></button>
-                            <button class="fab fa-google fa-2x " id="btnLogin"></button>
-                            <button class="fab fa-facebook-f fa-2x" id="btnLogin"></button>
-                        </div>
-                    </div>
-
+            </div>
+            <div class="boxBtnCenter">
+                <button id="btnLogin">Login</button>
+                <span>ou</span>
+                <div class="iconesLogin">
+                    <button class="fab fa-twitter fa-2x " id="btnIcon"></button>
+                    <button class="fab fa-apple fa-2x " id="btnIcon"></button>
+                    <button class="fab fa-google fa-2x " id="btnIcon"></button>
+                    <button class="fab fa-facebook-f fa-2x" id="btnIcon"></button>
                 </div>
-
             </div>
 
-            <hr>
-            <p>Ainda não é um membro? - <a href="./telaCadastrol.html">Cadastra-se</a> </p>
+            
+            <div class="titulosLogin">
+                <hr>
+                <p id = "esqueceuSenha">Ainda não é um membro? - <a href="./telaCadastrol.html">Cadastra-se</a> </p>
+            </div>
 
         </div>
 
